spacing fix

--- a/blog/style.css
+++ b/blog/style.css
@@ -3,6 +3,11 @@ h1 {
     font-family: 'Permanent Marker', cursive;
 }
 
+header {
+    text-shadow: 1px 1px 10px rgb(6, 56, 17);
+    font-family: 'Permanent Marker', cursive;
+}
+
 body {  font-size: larger;
         font-family: 'Permanent Marker', cursive;
         background-color: slategray;
